# soup-of-sea-turtle

./: Cargo.toml  aggr.pu  domain_model.md  game_usecase.pu  objects.pu  pal.pu  room_usecase.pu  system.pu  test.pu
domain/: Cargo.toml
domain/src/: common.rs  entity.rs  lib.rs
domain/src/common/: id.rs  player_name.rs
domain/src/entity/: game.rs  game_room.rs  guest.rs  host.rs  log.rs  member.rs  party.rs  player.rs  room.rs  user.rs
domain/src/entity/game/: answer.rs  error.rs  id.rs  phase.rs  players.rs  question.rs  repository.rs  state.rs  subject.rs
domain/src/entity/host/: room_manager.rs
domain/src/entity/log/: id.rs  qa.rs  repository.rs
domain/src/entity/party/: error.rs  repository.rs
domain/src/entity/room/: id.rs  members.rs  name.rs  repository.rs
domain/src/entity/user/: id.rs  name.rs  repository.rs
domain/src/service/: room.rs
infra/: Cargo.toml
infra/src/: in_memory.rs
presentation/: Cargo.toml
presentation/src/: main.rs
proto/: userservice.proto
pu/: domeinmodel.pu  service.pu  usecase.pu
usecase/: Cargo.toml
usecase/src/: room.rs  user.rs
userservice/domain/: Cargo.toml
userservice/domain/src/: lib.rs  user.rs
userservice/domain/src/user/: repository.rs  user_email.rs  user_identity.rs  user_name.rs
userservice/usecase/: Cargo.toml
web-app/: package-lock.json
web-app/src/: app.tsx
web-app/src/routes/: index.tsx
