[workspace]

members=[
    "domain", "infra", "presentation", "usecase", "userservice/domain", "userservice/usecase",
]

[workspace.dependencies]
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = {version = "1.36.0", features = ["full"]}
uuid = {version = "1.7.0", features = ["v4","v7"]}
