[package]
edition = "2021"
name = "presentation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
domain = {path = "../domain"}
infra = {path = "../infra"}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {version = "1.36.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["cors"] }
usecase = {path = "../usecase"}
